# rust-starter-kit

./: Cargo.toml  LICENSE  README.md
migrations/2024-08-12-174050_create_users_table/: up.sql
public/css/: main.css
public/js/: main.js
src/: main.rs
src/db/: mod.rs  models.rs  schema.rs
src/routes/: mod.rs  users.rs
templates/: base.html  index.html
